# distributed-systems-labs

./: .gitignore
lab3/: CMakeLists.txt  README.md
lab3/docker/: Dockerfile  hazelcast.xml
lab3/src/: distributed_lock.cpp  map_reader.cpp  map_writer.cpp  map_writer_mt.cpp  queue_reader.cpp  queue_writer.cpp  topic_reader.cpp  topic_writer.cpp
lab4/: README.md  receive.py  send.py
lab5/: README.md  deregister_service.sh  query_health.sh  query_service.sh  register.json  register_health_service.sh  register_healthy.json  register_service.sh
